[package]
name        = "magnetar-cli"
description = "magnetar CLI — produce, consume, inspect, and admin against an Apache Pulsar broker."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
readme        = "../../README.md"
keywords      = { workspace = true }
categories    = { workspace = true }
publish     = true
build       = "build.rs"

[[bin]]
name = "magnetar"
path = "src/main.rs"
# The `magnetar` lib crate also emits rustdoc into `target/doc/magnetar/`.
# Disabling rustdoc on the binary avoids the documented output collision
# (cargo issue #6313) without renaming the user-visible CLI.
doc  = false

[lints]
workspace = true

[features]
# PIP-460 scalable topics (ADR-0031). Default OFF. Adds the `topic-info`
# subcommand (prints a scalable topic's segment DAG). Propagates the façade's
# experimental scalable surface.
scalable-topics = ["magnetar/scalable-topics", "magnetar-admin/scalable-topics"]

[dependencies]
magnetar           = { workspace = true, features = ["tokio"] }
magnetar-admin     = { workspace = true }
anstream           = "1"
anstyle            = "1"
clap               = { workspace = true }
tokio              = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
url                = { workspace = true }
