[package]
name        = "magnetar-cli"
description = "magnetar CLI — produce, consume, inspect, and admin against an Apache Pulsar broker."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
readme        = "../../README.md"
keywords      = { workspace = true }
categories    = { workspace = true }
publish     = true
build       = "build.rs"

[[bin]]
name = "magnetar"
path = "src/main.rs"
# The `magnetar` lib crate also emits rustdoc into `target/doc/magnetar/`.
# Disabling rustdoc on the binary avoids the documented output collision
# (cargo issue #6313) without renaming the user-visible CLI.
doc  = false

[lints]
workspace = true

[features]
default = ["crypto-aws-lc-rs"]

# PIP-460 scalable topics (ADR-0031). Default OFF. Adds the `topic-info`
# subcommand (prints a scalable topic's segment DAG). Propagates the façade's
# experimental scalable surface.
scalable-topics = ["magnetar/scalable-topics", "magnetar-admin/scalable-topics"]

# --- Crypto provider features (ADR-0035). Mirror the façade's pluggable
# rustls crypto backend down into the binary crate. `magnetar-admin` is
# imported directly here (not through the façade's `admin` feature), so
# the cascade has to forward to it explicitly — otherwise reqwest in the
# admin client is compiled without any TLS feature and every `https://`
# admin URL fails at the connector layer. Single-provider builds use
# `--no-default-features --features crypto-<x>`. ---
crypto-aws-lc-rs = [
    "magnetar/crypto-aws-lc-rs",
    "magnetar-admin/crypto-aws-lc-rs",
]
crypto-ring = [
    "magnetar/crypto-ring",
    "magnetar-admin/crypto-ring",
]
crypto-openssl = [
    "magnetar/crypto-openssl",
    "magnetar-admin/crypto-openssl",
]
crypto-fips = [
    "magnetar/crypto-fips",
    "magnetar-admin/crypto-fips",
]

[dependencies]
magnetar           = { workspace = true, default-features = false, features = ["tokio"] }
magnetar-admin     = { workspace = true }
anstream           = "1"
anstyle            = "1"
clap               = { workspace = true }
tokio              = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
url                = { workspace = true }
