[package]
name        = "magnetar-differential"
description = "Tokio ↔ moonpool differential equivalence harness for magnetar — trace model, scripted broker, golden traces. Test-only."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
readme        = "../../README.md"
keywords      = { workspace = true }
categories    = { workspace = true }
publish       = false

[lints]
workspace = true

[features]
# PIP-460 scalable topics (ADR-0031). Turns on the scalable-topic golden
# trace equivalence tests (tokio ↔ moonpool DagWatch event-stream parity).
# Propagates the proto wire surface plus the engine `ScalableTopicsApi` impls.
scalable-topics = [
    "magnetar-proto/scalable-topics",
    "magnetar-runtime-tokio/scalable-topics",
    "magnetar-runtime-moonpool/scalable-topics",
]

# FoundationDB-style buggify fault-injection (ADR-0048). Default OFF.
# Forwards to proto + engines. The differential harness itself does
# NOT enable buggify in any of its assertions: the equivalence
# contract is tokio ↔ moonpool with `Buggify::disabled` on both
# sides. Enabling the feature only ensures the type plumbing compiles
# under `--all-features` workspace builds.
buggify = [
    "magnetar-proto/buggify",
    "magnetar-runtime-tokio/buggify",
    "magnetar-runtime-moonpool/buggify",
]

[dependencies]
magnetar-proto            = { workspace = true }
magnetar-runtime-tokio    = { workspace = true }
magnetar-runtime-moonpool = { workspace = true }
bytes                     = { workspace = true }
moonpool-core             = { workspace = true }
parking_lot               = { workspace = true }
tokio                     = { workspace = true, features = ["rt", "rt-multi-thread", "net", "io-util", "sync", "macros", "time"] }
tracing                   = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "io-util", "test-util", "time", "sync"] }
# `tests/sasl_kerberos_equivalence.rs` proves the GSSAPI initiate loop
# emits byte-identical `CommandAuthResponse` bytes under both engines
# (per ADR-0024 layer 4). Provider lives in `magnetar-auth-sasl`; we
# pull it WITHOUT the `kerberos` feature so no libgssapi linkage leaks.
magnetar-auth-sasl = { workspace = true }
# Athenz auth_data equivalence (ADR-0030, ADR-0024 layer d). A scripted
# `ZtsClient` fake (needs `async-trait`) + a fixed `wall_clock` prove the
# minted JWT and cached CONNECT auth_data are byte-identical across the
# two engine-shaped drivers. `crypto-aws-lc-rs` for the deterministic RS256.
magnetar-auth-athenz = { workspace = true, features = ["zts", "crypto-aws-lc-rs"] }
async-trait = { workspace = true }
# PIP-33 marker encoding in tests/replicated_subscriptions_equivalence.rs.
prost = { workspace = true }
# Capturing fmt subscriber for `tests/corrupted_frame_equivalence.rs` — the
# proto point-of-detection `error!` is the witness that the injected
# CRC32C-corrupted frame actually hit each engine (ADR-0054 / decision Q2).
# Dev-only; never compiled into the harness library itself.
tracing-subscriber = { workspace = true }
