[package]
name        = "magnetar-fakes"
description = "In-process Pulsar broker fake — frame-in / frame-out, with per-command hooks for fault injection. Dev-dependency only."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
readme        = "../../README.md"
keywords      = { workspace = true }
categories    = { workspace = true }
publish     = true

[lints]
workspace = true

[dependencies]
magnetar-proto = { workspace = true }
bytes          = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
