[package]
name        = "magnetar-proto"
description = "Sans-io Apache Pulsar wire protocol — encode/decode, framing, state machines. No I/O dependencies. No channels."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
readme        = "README.md"
keywords      = { workspace = true }
categories    = { workspace = true }

[lints]
workspace = true

[features]
# PIP-460 scalable topics (ADR-0031). Default OFF — until upstream cuts a
# Pulsar 5.0 RC that includes PIP-460, the new wire commands are
# hand-encoded as `#[derive(prost::Message)]` structs in
# `src/pb/scalable_topics.rs` rather than vendored into the generated
# `pb/pulsar.proto.rs`. Enabling the feature compiles the
# `pb::scalable_topics` module, the `dag_watch` state machine, the new
# `Conn` entries, the new `ConnectionEvent` variants, and the
# `MessageId.segment_id` extension. No new dependency — `prost` is already
# in the dependency set.
default          = []
scalable-topics  = []

[dependencies]
bytes        = { workspace = true }
crc32c       = { workspace = true }
prost        = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
slab         = { workspace = true }
uuid         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
apache-avro  = { workspace = true }
schemars     = { workspace = true }
hdrhistogram = { workspace = true }
# Sync primitive only — no I/O, no async, no networking.
# Used by ProducerSlot / ConsumerSlot for the per-handle hot lock
# introduced by the split-connection-mutex refactor (see ADR-0038).
# Already a workspace dep used by the runtime crates.
parking_lot  = { workspace = true }
# FxHash for the producer's `pending_index` and the consumer's
# `batch_ack_tracker` hot maps. SipHash is overkill on u64-shaped
# keys we control end-to-end.
rustc-hash   = { workspace = true }

[dev-dependencies]
proptest  = { workspace = true }
rstest    = { workspace = true }
tempfile  = { workspace = true }
