[package]
name        = "magnetar-runtime-moonpool"
description = "moonpool runtime engine for magnetar — deterministic-sim friendly. Custom rustls-over-bytepipe TLS adapter. No channels."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
readme        = "../../README.md"
keywords      = { workspace = true }
categories    = { workspace = true }

[lints]
workspace = true

[features]
# Pluggable rustls crypto provider (issue #9, ADR-0035). Mirrors
# `magnetar-runtime-tokio` minus `tokio-rustls` — the moonpool engine
# drives `rustls::ClientConnection` over a byte pipe directly (ADR-0006)
# and never pulls `tokio-rustls`.
crypto-aws-lc-rs = ["rustls/aws_lc_rs"]
crypto-ring      = ["rustls/ring"]
crypto-fips      = ["rustls/fips"]
crypto-openssl   = ["dep:rustls-openssl"]

[dependencies]
magnetar-proto = { workspace = true }
bytes          = { workspace = true }
moonpool-core  = { workspace = true }
parking_lot    = { workspace = true }
rustls         = { workspace = true }
rustls-openssl = { workspace = true, optional = true }
slab           = { workspace = true }
tokio          = { workspace = true, features = ["sync", "macros", "rt", "time", "io-util"] }
tracing        = { workspace = true }
thiserror      = { workspace = true }

[dev-dependencies]
# Integration-test surface (crates/magnetar-runtime-moonpool/tests/**). The
# M7 chaos pack drives the sans-io state machine through `ConnectionShared`
# with synthetic broker frames and synthetic `Instant`s — no listener, no
# wall-clock, no Docker. tokio's paused-time runtime supplies the virtual
# clock for `send_timeout` / `ack_timeout` / OAuth refresh-edge scenarios.
tokio          = { workspace = true, features = ["sync", "macros", "rt", "rt-multi-thread", "time", "io-util", "net", "test-util"] }
# `tests/sim_chaos.rs` runs the moonpool engine under moonpool-sim's
# deterministic scheduler with an in-simulator broker workload speaking the
# minimum Pulsar wire subset. See ADR-0026 §D2.
moonpool-sim   = { workspace = true }
async-trait    = { workspace = true }
