[package]
name        = "magnetar-runtime-moonpool"
description = "moonpool runtime engine for magnetar — deterministic-sim friendly. Custom rustls-over-bytepipe TLS adapter. No channels."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
readme        = "../../README.md"
keywords      = { workspace = true }
categories    = { workspace = true }

[lints]
workspace = true

[features]
# Pluggable rustls crypto provider (issue #9, ADR-0035). Mirrors
# `magnetar-runtime-tokio` minus `tokio-rustls` — the moonpool engine
# drives `rustls::ClientConnection` over a byte pipe directly (ADR-0006)
# and never pulls `tokio-rustls`.
#
# A default crypto provider is set so the crate compiles cleanly when built
# directly as a workspace member (e.g. `cargo build --workspace` or the e2e
# job's `cargo test --workspace --features e2e,…`). The magnetar facade picks
# the provider via its own `crypto-*` features (which propagate through
# `magnetar-runtime-moonpool?/crypto-*`); the per-provider build matrix in
# `cargo xtask check-crypto-matrix` continues to gate each provider in
# isolation through the facade with `--no-default-features`.
default = ["crypto-aws-lc-rs"]
crypto-aws-lc-rs = ["rustls/aws_lc_rs"]
crypto-ring      = ["rustls/ring"]
crypto-fips      = ["rustls/fips"]
crypto-openssl   = ["dep:rustls-openssl"]

[dependencies]
magnetar-proto = { workspace = true }
bytes          = { workspace = true }
moonpool-core  = { workspace = true }
parking_lot    = { workspace = true }
rustls         = { workspace = true }
rustls-openssl = { workspace = true, optional = true }
slab           = { workspace = true }
tokio          = { workspace = true, features = ["sync", "macros", "rt", "time", "io-util"] }
tracing        = { workspace = true }
thiserror      = { workspace = true }

[dev-dependencies]
# Integration-test surface (crates/magnetar-runtime-moonpool/tests/**). The
# M7 chaos pack drives the sans-io state machine through `ConnectionShared`
# with synthetic broker frames and synthetic `Instant`s — no listener, no
# wall-clock, no Docker. tokio's paused-time runtime supplies the virtual
# clock for `send_timeout` / `ack_timeout` / OAuth refresh-edge scenarios.
tokio          = { workspace = true, features = ["sync", "macros", "rt", "rt-multi-thread", "time", "io-util", "net", "test-util"] }
# `tests/sim_chaos.rs` runs the moonpool engine under moonpool-sim's
# deterministic scheduler with an in-simulator broker workload speaking the
# minimum Pulsar wire subset. See ADR-0026 §D2.
moonpool-sim   = { workspace = true }
async-trait    = { workspace = true }
# SASL Kerberos integration test driver. `magnetar-auth-sasl` ships
# `ScriptedGssapiClient` without enabling the `kerberos` feature so this
# dev-dep does NOT pull libgssapi into the build (ADR-0029 + ADR-0024 §3).
magnetar-auth-sasl = { workspace = true }
# PIP-33 marker encoding in tests/replicated_subscriptions.rs.
prost          = { workspace = true }
# In-process TLS server fixture for `tests/tls_transport_coverage.rs`. The
# moonpool engine's `connect_tls` drives `RustlsByteAdapter` over the
# `TokioNetworkProvider`'s `tokio::net::TcpStream`; the test peer binds a
# `TlsAcceptor` on `127.0.0.1` and completes the handshake against it.
# `rcgen` mints a self-signed cert at fixture build time so the suite has
# no on-disk PEM dependency. Both crates are dev-only — neither leaks
# into the published crate's surface.
rcgen          = { version = "0.13", default-features = false, features = ["aws_lc_rs", "pem"] }
tokio-rustls   = { workspace = true, features = ["aws_lc_rs"] }
