[package]
name        = "magnetar-runtime-moonpool"
description = "moonpool runtime engine for magnetar — deterministic-sim friendly. Custom rustls-over-bytepipe TLS adapter. No channels."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
readme        = "../../README.md"
keywords      = { workspace = true }
categories    = { workspace = true }

[lints]
workspace = true

[features]
# Pluggable rustls crypto provider (issue #9, ADR-0035). Mirrors
# `magnetar-runtime-tokio` minus `tokio-rustls` — the moonpool engine
# drives `rustls::ClientConnection` over a byte pipe directly (ADR-0006)
# and never pulls `tokio-rustls`.
#
# A default crypto provider is set so the crate compiles cleanly when built
# directly as a workspace member (e.g. `cargo build --workspace` or the e2e
# job's `cargo test --workspace`). The magnetar facade picks
# the provider via its own `crypto-*` features (which propagate through
# `magnetar-runtime-moonpool?/crypto-*`); the per-provider build matrix in
# `cargo xtask check-crypto-matrix` continues to gate each provider in
# isolation through the facade with `--no-default-features`.
default = ["crypto-aws-lc-rs"]
crypto-aws-lc-rs = ["rustls/aws_lc_rs"]
crypto-ring      = ["rustls/ring"]
crypto-fips      = ["rustls/fips"]
crypto-openssl   = ["dep:rustls-openssl"]
# PIP-460 scalable topics (ADR-0031). Default OFF — turns on the
# `magnetar-proto/scalable-topics` wire surface that the moonpool engine's
# `ScalableTopicsApi` impl drives. Additive: no new dependency.
scalable-topics  = ["magnetar-proto/scalable-topics"]
# FoundationDB-style buggify fault-injection (ADR-0048). Default OFF.
# Forwards to `magnetar-proto/buggify` so the proto-layer choice
# points become buggify-aware in the moonpool sim test suite. The
# moonpool engine still ships `Buggify::disabled` by default — tests
# opt in by calling `Connection::set_buggify` with their own
# seed-driven RNG handle. Additive: no new dependency.
buggify          = ["magnetar-proto/buggify"]

[dependencies]
magnetar-proto = { workspace = true }
bytes          = { workspace = true }
# `futures::io::{AsyncRead,AsyncWrite}Ext` drive moonpool's futures-io
# `TcpStream` (moonpool main switched off raw tokio-io). `std` gates the
# `futures::io` module; the workspace dep is `default-features = false`.
futures        = { workspace = true, features = ["std"] }
moonpool-core  = { workspace = true }
parking_lot    = { workspace = true }
rustls         = { workspace = true }
rustls-openssl = { workspace = true, optional = true }
slab           = { workspace = true }
tokio          = { workspace = true, features = ["sync", "macros", "rt", "time", "io-util"] }
tracing        = { workspace = true }
thiserror      = { workspace = true }

[dev-dependencies]
# Integration-test surface (crates/magnetar-runtime-moonpool/tests/**). The
# M7 chaos pack drives the sans-io state machine through `ConnectionShared`
# with synthetic broker frames and synthetic `Instant`s — no listener, no
# wall-clock, no Docker. tokio's paused-time runtime supplies the virtual
# clock for `send_timeout` / `ack_timeout` / OAuth refresh-edge scenarios.
tokio          = { workspace = true, features = ["sync", "macros", "rt", "rt-multi-thread", "time", "io-util", "net", "test-util"] }
# `tests/sim_chaos.rs` runs the moonpool engine under moonpool-sim's
# deterministic scheduler with an in-simulator broker workload speaking the
# minimum Pulsar wire subset. See ADR-0026 §D2.
moonpool-sim   = { workspace = true }
async-trait    = { workspace = true }
# moonpool main replaced the legacy `StateHandle` timeline with plain-`tracing`
# capture (`SimulationLayer`): `tests/sim_chaos.rs`'s in-sim broker emits
# correctness facts via `tracing::info!(capture = true, event = valuable(&..))`
# and the invariants read them back through `serde`-deserialised `TrailQuery`
# views. The `valuable` field shim needs `tracing/valuable`; `valuable` itself
# supplies the `#[derive(Valuable)]`; `serde` round-trips the payload. All
# test-only — the `tracing/valuable` feature is unified into the test build but
# never changes the published crate's behaviour. `valuable` pins to 0.1 to
# match moonpool-sim's own dependency.
tracing        = { workspace = true, features = ["valuable"] }
valuable       = { version = "0.1", default-features = false, features = ["derive"] }
serde          = { workspace = true }
# SASL Kerberos integration test driver. `magnetar-auth-sasl` ships
# `ScriptedGssapiClient` without enabling the `kerberos` feature so this
# dev-dep does NOT pull libgssapi into the build (ADR-0029 + ADR-0024 §3).
magnetar-auth-sasl = { workspace = true }
# Athenz refresh-edge test (ADR-0030, ADR-0024 layer c). Drives the real
# `AthenzProvider` with a scripted `ZtsClient` fake (impl uses the
# `async-trait` dev-dep above) + an injected `now: Instant` schedule — no
# HTTPS, no Docker. `crypto-aws-lc-rs` matches the crate default provider.
magnetar-auth-athenz = { workspace = true, features = ["zts", "crypto-aws-lc-rs"] }
# PIP-33 marker encoding in tests/replicated_subscriptions.rs.
prost          = { workspace = true }
# In-process TLS server fixture for `tests/tls_transport_coverage.rs`. The
# moonpool engine's `connect_tls` drives `RustlsByteAdapter` over the
# `TokioNetworkProvider`'s `tokio::net::TcpStream`; the test peer binds a
# `TlsAcceptor` on `127.0.0.1` and completes the handshake against it.
# `rcgen` mints a self-signed cert at fixture build time so the suite has
# no on-disk PEM dependency. Both crates are dev-only — neither leaks
# into the published crate's surface.
rcgen          = { version = "0.14", default-features = false, features = ["aws_lc_rs", "pem"] }
tokio-rustls   = { workspace = true, features = ["aws_lc_rs"] }
# Global capturing subscriber for the ADR-0054 secret-scan test
# (tests/logging_no_secrets.rs). Dev-only — the library itself never
# installs a subscriber.
tracing-subscriber = { workspace = true }
