[package]
name        = "magnetar-runtime-tokio"
description = "Tokio runtime engine for magnetar — TCP + tokio-rustls TLS. No channels."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
readme        = "../../README.md"
keywords      = { workspace = true }
categories    = { workspace = true }

[lints]
workspace = true

[dependencies]
magnetar-proto      = { workspace = true }
bytes               = { workspace = true }
parking_lot         = { workspace = true }
pin-project-lite    = { workspace = true }
slab                = { workspace = true }
tokio               = { workspace = true, features = ["rt", "net", "time", "io-util", "sync", "macros"] }
tokio-util          = { workspace = true, features = ["compat"] }
tokio-rustls        = { workspace = true }
rustls              = { workspace = true }
rustls-pki-types    = { workspace = true }
rustls-native-certs = { workspace = true }
# Compression codecs — Pulsar's `CompressionType` enum maps 1:1 to these crates.
lz4_flex            = { workspace = true }
flate2              = { workspace = true }
zstd                = { workspace = true }
snap                = { workspace = true }
tracing             = { workspace = true }
thiserror           = { workspace = true }
url                 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "test-util", "time", "sync"] }
