[package]
name        = "magnetar-runtime-tokio"
description = "Tokio runtime engine for magnetar — TCP + tokio-rustls TLS. No channels."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
readme        = "../../README.md"
keywords      = { workspace = true }
categories    = { workspace = true }

[lints]
workspace = true

[features]
# Pluggable rustls crypto provider (issue #9, ADR-0035). The façade
# propagates exactly one of these via `dep?/feature` — under
# `--all-features` the cfg cascade in `src/tls_crypto.rs` picks
# aws-lc-rs (highest priority). `rustls/fips` implies `aws_lc_rs`.
#
# A default crypto provider is set so the crate compiles cleanly when built
# directly as a workspace member (e.g. `cargo build --workspace` or the e2e
# job's `cargo test --workspace --features e2e,…`). The magnetar facade picks
# the provider via its own `crypto-*` features (which propagate through
# `magnetar-runtime-tokio?/crypto-*`); the per-provider build matrix in
# `cargo xtask check-crypto-matrix` continues to gate each provider in
# isolation through the facade with `--no-default-features`.
default = ["crypto-aws-lc-rs"]
crypto-aws-lc-rs = ["rustls/aws_lc_rs", "tokio-rustls/aws_lc_rs"]
crypto-ring      = ["rustls/ring",      "tokio-rustls/ring"]
crypto-fips      = ["rustls/fips"]
crypto-openssl   = ["dep:rustls-openssl"]
# PIP-460 scalable topics (ADR-0031). Default OFF — turns on the
# `magnetar-proto/scalable-topics` wire surface that the tokio engine's
# `ScalableTopicsApi` impl drives. Additive: no new dependency.
scalable-topics  = ["magnetar-proto/scalable-topics"]

[dependencies]
magnetar-proto      = { workspace = true }
bytes               = { workspace = true }
parking_lot         = { workspace = true }
pin-project-lite    = { workspace = true }
slab                = { workspace = true }
tokio               = { workspace = true, features = ["rt", "net", "time", "io-util", "sync", "macros"] }
tokio-util          = { workspace = true, features = ["compat"] }
tokio-rustls        = { workspace = true }
rustls              = { workspace = true }
rustls-pki-types    = { workspace = true }
rustls-native-certs = { workspace = true }
rustls-openssl      = { workspace = true, optional = true }
# Compression codecs — Pulsar's `CompressionType` enum maps 1:1 to these crates.
lz4_flex            = { workspace = true }
flate2              = { workspace = true }
zstd                = { workspace = true }
snap                = { workspace = true }
tracing             = { workspace = true }
thiserror           = { workspace = true }
url                 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "test-util", "time", "sync"] }
# Used by the SASL Kerberos integration test; the auth-sasl crate ships
# `ScriptedGssapiClient` without enabling the `kerberos` feature, so this
# dev-dep does NOT pull libgssapi into the build.
magnetar-auth-sasl = { workspace = true }
# PIP-33 marker encoding in tests/replicated_subscriptions.rs.
prost = { workspace = true }
# Tempfile-backed token rotation tests in src/auth_file.rs.
tempfile = { workspace = true }
