[package]
name        = "magnetar"
description = "Apache Pulsar client driver for Rust. Public façade — re-exports the sans-io core plus the selected runtime engine."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
readme        = "../../README.md"
keywords      = { workspace = true }
categories    = { workspace = true }

[lints]
workspace = true

[features]
default  = ["tokio"]
tokio    = ["dep:magnetar-runtime-tokio", "dep:tokio", "dep:futures-util"]
moonpool = ["dep:magnetar-runtime-moonpool"]
admin    = ["dep:magnetar-admin"]
auth-oauth2 = ["dep:magnetar-auth-oauth2"]
auth-sasl   = ["dep:magnetar-auth-sasl"]
auth-athenz = ["dep:magnetar-auth-athenz"]
encryption  = ["dep:magnetar-messagecrypto"]
# End-to-end tests against a real Pulsar 4.x standalone broker via
# `testcontainers-rs`. Requires Docker on the host. CI runs these in
# the `e2e` job (workflow_dispatch + release branches only).
e2e         = ["tokio", "admin"]

[dependencies]
magnetar-proto             = { workspace = true }
magnetar-runtime-tokio     = { workspace = true, optional = true }
magnetar-runtime-moonpool  = { workspace = true, optional = true }
magnetar-admin             = { workspace = true, optional = true }
magnetar-auth-oauth2       = { workspace = true, optional = true }
magnetar-auth-sasl         = { workspace = true, optional = true }
magnetar-auth-athenz       = { workspace = true, optional = true }
magnetar-messagecrypto     = { workspace = true, optional = true }
bytes                      = { workspace = true }
futures-util               = { workspace = true, optional = true, features = ["std", "async-await"] }
parking_lot                = { workspace = true }
thiserror                  = { workspace = true }
tokio                      = { workspace = true, optional = true, features = ["rt", "sync", "test-util"] }
tracing                    = { workspace = true }
url                        = { workspace = true }
uuid                       = { workspace = true }

[dev-dependencies]
# `aws-lc-rs` is pulled in only for the PIP-4 e2e tests
# (`tests/e2e_crypto.rs`) where we need to generate RSA test keys for the
# `MessageCrypto` round-trip. The non-test crate path stays free of this
# heavy dep — encryption itself lives in `magnetar-messagecrypto`.
aws-lc-rs          = { workspace = true }
reqwest            = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
testcontainers     = { workspace = true }
tokio              = { workspace = true, features = ["rt-multi-thread", "macros", "time", "test-util"] }
tracing-subscriber = { workspace = true }
# `wiremock` powers the `e2e_oauth2` IDP stub. Pure dev-dep — not pulled
# in for non-test builds.
wiremock           = { workspace = true }
